kitchenowl/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kitchenowl
  namespace: kitchenowl
  annotations: 
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - food.sushiraccoon.com
    secretName: kitchenowl-tls
  rules:
  - host: food.sushiraccoon.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kitchenowl
            port:
              number: 80
